# py_uds_demo

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint-and-test.yml  publish-release-build.yml
docs/: index.md  reference_manual.md  src_manual.md
py_uds_demo/: __main__.py  uds_app.py  uds_client.py  uds_server.py
scripts/: build_wheel_package.bat  run_pytests.bat  run_pytests_with_report.bat
src/py_uds_demo/: __main__.py  uds_app.py  uds_client.py  uds_ecu_sim.py  uds_ecu_sim_client.py  uds_server.py
src/py_uds_demo/core/: client.py  server.py
src/py_uds_demo/core/utils/: helpers.py  responses.py  uds_constants.py
src/py_uds_demo/core/utils/services/: data_transmission.py  diagnostic_and_commmunication_management.py  input_output_contol.py  remote_activation_of_routine.py  stored_data_transmission.py  upload_download.py
src/py_uds_demo/interface/: api.py  cli.py  gui.py  web.py
src/py_uds_demo/ui/: app.py
tests/: test_api.py  test_py_uds_demo.py
