[project]
name = "py_uds_demo"
version = "2025.0.0"
description = "Learn and Practice UDS Protocol"
license = { text = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "chaitu-ycr", email = "chaitu.ycr@gmail.com" }]
keywords = ["python", "template"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows"
]
dynamic = [ "dependencies" ]

[project.urls]
homepage = "https://github.com/chaitu-ycr/py_uds_demo"
repository = "https://github.com/chaitu-ycr/py_uds_demo"
documentation = "https://chaitu-ycr.github.io/py_uds_demo/"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7"
streamlit = "*"

[tool.poetry.group.dev.dependencies]
pylint = "*"
pytest = "*"
pytest-html = "*"
pytest-sugar = "*"
pytest-clarity = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-xdist = "*"
pytest-timeout = "*"
pytest-randomly = "*"
pytest-rerunfailures = "*"
pytest-watch = "*"
pytest-pdb = "*"
mkdocs-material = "*"
mkdocstrings-python = "*"
mkdocs-include-markdown-plugin = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
