[project]
name = "py_uds_demo"
version = "25.0.1"
description = "Learn and Practice UDS Protocol"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10, <=3.14"
authors = [{ name = "chaitu-ycr", email = "chaitu.ycr@gmail.com" }]
keywords = ["python", "template"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "gradio",
]

[dependency-groups]
dev = [
    "ruff",
    "pylint",
    "pytest",
    "pytest-html",
    "pytest-sugar",
    "pytest-clarity",
    "pytest-cov",
    "pytest-xdist",
    "pytest-watch",
    "mkdocs-puml",
    "mkdocs-exclude",
    "mkdocs-material",
    "mkdocs-jupyter",
    "mkdocstrings-python",
    "mkdocs-macros-plugin",
    "mkdocs-include-markdown-plugin",
]

[project.urls]
homepage = "https://github.com/chaitu-ycr/py_uds_demo"
repository = "https://github.com/chaitu-ycr/py_uds_demo"
documentation = "https://chaitu-ycr.github.io/py_uds_demo/"

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"